todo lo que hicimos en clase

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,2 @@
-<app-header> </app-header>
-<div>
-  <h1> Hola mundo </h1>
-  <span> fuera</span>
-  <p>
-    <span> dentro </span>
-  </p>
-</div>
-<section>
-  <h1> Hola mundo 2 </h1>
-</section>
-<div id= "contenedor1">
-  <p>
-   <span>  Lorem ipsum </span>    dolor sit amet, consectetur adipisicing elit. Neque, ullam, voluptatibus? Aspernatur consectetur corporis cupiditate earum itaque modi molestias nesciunt nisi perferendis praesentium quod reprehenderit, ullam, voluptate. Officia, tempora, totam.
 
-  </p>
-
-</div>
-<div id= "contenedor2">
-  <p>
-    <span>  Lorem ipsum </span>    dolor sit amet, consectetur adipisicing elit. Neque, ullam, voluptatibus? Aspernatur consectetur corporis cupiditate earum itaque modi molestias nesciunt nisi perferendis praesentium quod reprehenderit, ullam, voluptate. Officia, tempora, totam.
-
-  </p>
-
-</div>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
