--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,16 @@
-<h1> texto de header</h1>
+<header>
+  <div class="logo">
+    <span> logo aqui</span>
+  </div>
+  <nav *ngIf="toggleNav">
+    <a href="">Inicio</a>
+
+    <a href="">chau</a>
+    <button type="button" (click)="mostrarNav()"> x</button>
+  </nav>
+  <div class="showNav">
+    <button type="button" (click)="mostrarNav()"> mostrar </button>
+  </div>
+
+
+</header>
