--- a/src/app/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/pokemon-detail/pokemon-detail.component.html
@@ -1,1 +1,10 @@
 <h1>{{pokemon?.name}}</h1>
+<div>
+  <img  style="width:default%" src="{{pokemonDetalles?.sprites.front_default}}">
+  <p><span>Vida:</span>{{pokemonDetalles?.stats[0].base_stat}}</p>
+  <p><span>Ataque:</span>{{pokemonDetalles?.stats[1].base_stat}}</p>
+  <p><span>Defensa:</span>{{pokemonDetalles?.stats[2].base_stat}}</p>
+  <p><span>Ataque Especial:</span>{{pokemonDetalles?.stats[3].base_stat}}</p>
+  <p><span>Defensa Especial:</span>{{pokemonDetalles?.stats[4].base_stat}}</p>
+  <p><span>Velocidad:</span>{{pokemonDetalles?.stats[5].base_stat}}</p>
+</div>
